--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,7 @@
 /* ----- Fonts ----- */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,600;1,700&display=swap');
 
 /* ----- Layout: Text and Figures ----- */
 
@@ -55,9 +56,8 @@ h1 {
   text-align: center;
 }
 h2, h3 {
-  font-family: 'Roboto Serif', serif;
-  font-weight: 500;
-  font-style: italic;
+  font-family: 'Overpass', serif;
+  font-weight: 900;
   color: #111111;
   line-height: 1.3;
   margin-top: 2rem;
@@ -65,7 +65,7 @@ h2, h3 {
   text-align: center;
 }
 h4, h5, h6 {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Overpass', sans-serif;
   font-weight: 600;
   color: #111111;
   line-height: 1.3;
@@ -74,13 +74,13 @@ h4, h5, h6 {
   text-align: center;
 }
 h2 { font-size: 1.6rem; }
-h3 { font-size: 1.3rem; }
+h3 { font-size: 1.4rem; }
 h4 { font-size: 1.1rem; }
 
 /* Document title */
 .quarto-title h1.title {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
+  font-family: 'Overpass', sans-serif;
+  font-weight: 900;
   font-size: 2.2rem;
   line-height: 1.3;
   text-align: center;
@@ -166,8 +166,8 @@ figcaption,
 
 /* Custom IRC callout */
 .callout-irc {
-  border-left: 6px solid rgba(101, 84, 192, 0.7); /* purple w/ 70% opacity */
-  background-color: rgba(101, 84, 192, 0.1);      /* tealfaint background version */
+  border-left: 6px solid rgba(255, 199, 44, 0.9); /* purple w/ 70% opacity */
+  background-color: rgba(233, 233, 233, 0.9);      /* tealfaint background version */
   border-radius: 8px;
   padding: 1em;
   margin-top: 1em;
@@ -187,7 +187,33 @@ figcaption,
 
 /* Make the number larger + bold */
 .callout-irc .big-number {
+  font-family: 'Overpass', sans-serif;
   font-weight: 700;
   font-size: 1.3em; /* bump up size */
+}
+
+.navbar {
+  position: relative;
+}
+
+/* logo container */
+.navbar .brand-logo {
+  position: absolute;
+  top: 10px;   /* adjust so it "floats" above navbar */
+  left: 10px;
+  z-index: 10;  /* make sure it's on top */
+}
+
+/* the logo image */
+.navbar .brand-logo img {
+  height: 200px;
+  width: auto;
+  display: block;
+}
+
+/* adjust the navbar link text */
+.navbar-nav > li > a {
+  padding-left: 110px;  /* leave space for the logo */
+  line-height: 56px;    /* vertically center in navbar */
 }
 
